spade-tests/src/snapshots/spade_tests__parser__module_outside_doc_comment_hint.snap
---
source: spade-tests/src/parser.rs
---
/// This is my module :3
mod x {}


error: doc is not a valid attribute for module
  ┌─ testinput:1:1
  │
1 │ /// This is my module :3
  │ ^^^^^^^^^^^^^^^^^^^^^^^^ Unsupported attribute for module
  │
  = help: If you want to document this module, use inside comments (//!) instead.
